<resources>
    <string name="app_name">SaveSmart</string>
    <string name="todo">TODO</string>
    <string name="what_is_this">What is this?</string>
    <string name="scan_here_for_wallet_address">Scan here for wallet address!</string>
    <string name="scanhere">Scan here for Bitcoin address!</string>
    <string name="todo2">TODO2</string>
    <string name="transactions">Transactions</string>
    <string name="recipient">Recipient:</string>
    <string name="bitcoin_sent">Bitcoin Sent:</string>
    <string name="transaction_list">Transaction List</string>
    <string name="value_in_usd">Value in USD:</string>
    <string name="textview">TextView</string>
    <string name="description">Description:</string>
    <string name="_reciptxtview">TextView</string>
    <string name="_usdvaluetxtview">TextView</string>
    <string name="btcsenttxtview">TextView</string>
    <string name="_sendbtn">Send</string>
    <string name="_convertbtn">Convert</string>

    //calendar names
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="budgeted">Budgeted</string>
    <string name="used">Used</string>
    <string name="amount_left">Amount Left</string>
    <string name="budgeting">Budgeting</string>

    //Income ExpenseSpinnerStuff
    <string-array name="howOften">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>