<?xml version="1.0" encoding="utf-8"?>
<!--Jordan-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showRecip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CryptoTransactionsList">


    <androidx.cardview.widget.CardView
        android:id="@+id/descriptioncardview"
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usdvaluecardview"
        app:layout_constraintVertical_bias="0.0">

        <!--
        cardelevation property will give elevation to the card view
        card corner radius will provide radius to the card view
        card background color will give background color to the card view
        card max elevation will give the cardview maximum elevation
        card prevent corner overlap will add padding to CardView on v20 and before to prevent intersections between the Card content and rounded corners.
        card use compact padding will add padding in API v21+ as well to have the same measurements with previous versions.
        below are the two widgets imageview and text view we are displaying inside our card view.
        -->

        <TextView
            android:id="@+id/showDescTxtView"
            android:layout_width="146dp"
            android:layout_height="44dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="20dp"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/descriptionimage"
            android:layout_width="120dp"
            android:layout_height="130dp"

            android:contentDescription="@string/app_name"
            android:src="@drawable/descriptionicon_foreground" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/usdvaluecardview"
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btcsentcardview">


        <TextView
            android:id="@+id/showUSDValue"
            android:layout_width="146dp"
            android:layout_height="44dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"

            android:text="@string/value_in_usd"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/usdvalueimage"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/usdicon_foreground1" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/recipientcardview"
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/btcsentcardview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <TextView
            android:id="@+id/showReciptextview"
            android:layout_width="146dp"
            android:layout_height="97dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/recipient"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/recipientimage"
            android:layout_width="120dp"
            android:layout_height="130dp"

            android:contentDescription="@string/app_name"
            android:src="@drawable/recipientimg_foreground" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btcsentcardview"
        android:layout_width="325dp"
        android:layout_height="175dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="188dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/showBTCValue"
            android:layout_width="134dp"
            android:layout_height="73dp"
            android:layout_gravity="end|center_horizontal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/bitcoin_sent"
            android:textColor="#000000"
            android:textSize="25sp"

            android:textStyle="bold" />

        <ImageView
            android:id="@+id/bitcoinsentimage"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/btcicon_round" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
